2008-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/omp_thread_view.c: Move OMP Thread View functions out of
	pixel cache module and put them in this new module.
	* coders/xtrn.c (ReadXTRNImage): XTRNSTREAM mode was never
	implemented so remove unfinished stub code.

2008-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageDepth): Needed to assign image depth
	attribute to user-specified depth rather than only altering the
	pixels.
	(SetImageOpacity): Reimplement using pixel iterators.
	(AverageImages): Accelerate using OpenMP.
	(GetImageBoundingBox): Accelerate using OpenMP.

2008-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ConstituteTextureImage): Accelerate using
	OpenMP.
	* magick/image.c (TextureImage): Accelerate using OpenMP.
	* magick/render.c (DrawAffineImage): Accelerate using OpenMP.

2008-10-13  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c Fixed palette problem for >8 bit images.

2008-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Using +page now resets image
	page offsets as documented for convert and mogrify.

2008-10-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GradientImage): Re-do OpenMP accelleration based
	on new pixel cache interface for better performance.
	* coders/dpx.c (ReadDPXImage): Progress monitor needs to tick when
	row count is updated.
	* coders/fits.c (ReadFITSImage): Update to use
	MagickFindRawImageMinMax().
	(WriteFITSImage): Expand buffer size to MaxTextExtent.  Include
	GraphicsMagick version in FITS header.
	* coders/mat.c (ReadMATImage): Update to use
	MagickFindRawImageMinMax().
	* magick/constitute.c (MagickFindRawImageMinMax): New internal
	function to assist with finding the minimum and maximum data of
	raw image files.

2008-10-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AcquireThreadViewPixels): Convert thread